Resolved issues issue #1: enhancement: Move to Sync Storage enhancement issue #2: enhancement: Dark mode preference enhancement issue #3: enhancement: Restrict to necessary paths enhancement issue #4: bug: Remove link rewrite for shorts bug

--- a/src/popup.css
+++ b/src/popup.css
@@ -1,5 +1,4 @@
 body {
-	background-color: #ffffff;
 	font-family: sans-serif;
 	font-size: 12pt;
 	min-width: 20em;
@@ -21,25 +20,15 @@ body {
 }
 
 .group {
-	border: 1px solid #ff0000;
 	border-radius: .5em;
 	margin: 0;
 	padding: .25em .75em .5em;
 }
 .group > .title {
-	border: 1px solid #ff0000;
 	border-radius: .5em;
 	font-weight: bold;
 	margin: 0 0 0 -.25em;
 	padding: 0 .25em;
-}
-.group .textbox {
-	border: 1px solid #ff0000;
-	border-radius: .5em;
-	outline: none;
-}
-.group .textbox:focus {
-	outline: 1px solid #ff0000;
 }
 
 .info {
@@ -54,14 +43,12 @@ body {
 	text-align: right;
 }
 
-.table, .info > .version {
+.table,
+.info > .version {
 	border-collapse: collapse;
 	width: 100%;
 }
 
-.table tr:nth-child(even) {
-	background-color: #ffbbbb;
-}
 .table td {
 	padding: .25em;
 	width: 100%;
@@ -69,16 +56,86 @@ body {
 .table td:first-child {
 	width: 100%;
 }
-.table .textbox {
-	width: 100%;
-}
 .table .button {
-	background: #880000;
 	border-radius: .5em;
 	border-style: none;
-	color: #ffffff;
 	cursor: pointer;
 	font-weight: bold;
 	margin-left: .5em;
 	padding: 2px 4px;
+}
+.table .textbox {
+	border-radius: .5em;
+	outline: none;
+	width: 100%;
+}
+
+/* Colors */
+body {
+	background-color: hwb(0 95% 5%);
+	color: hwb(0 5% 95%);
+}
+
+.group {
+	border: 1px solid hwb(0 0% 0%);
+}
+.group > .title {
+	background-color: hwb(0 85% 0%);
+	border: 1px solid hwb(0 0% 0%);
+}
+
+.table.list tr:nth-child(even) {
+	background-color: hwb(0 85% 0%);
+}
+.table.list tr:hover {
+	background-color: hwb(0 75% 0%);
+}
+.table.list tr:nth-child(even):hover {
+	background-color: hwb(0 65% 0%);
+}
+.table .button {
+	background-color: hwb(0 55% 0%);
+	border: 1px solid hwb(0 0% 0%);
+	color: hwb(0 5% 95%);
+}
+.table .textbox  {
+	background-color: hwb(0 85% 0%);
+	border: 1px solid hwb(0 0% 0%);
+	color: hwb(0 5% 95%);
+}
+.table .textbox:focus {
+	background-color: hwb(0 65% 0%);
+	outline-style: none;
+}
+
+@media (prefers-color-scheme: dark) {
+	body {
+		background-color: hwb(0 5% 95%);
+		color: hwb(0 95% 5%);
+	}
+
+	.group > .title {
+		background-color: hwb(0 0% 80%);
+	}
+
+	.table.list tr:nth-child(even) {
+		background-color: hwb(0 0% 80%);
+	}
+	.table.list tr:hover {
+		background-color: hwb(0 0% 70%);
+	}
+	.table.list tr:nth-child(even):hover {
+		background-color: hwb(0 0% 60%);
+	}
+	.table .button {
+		background-color: hwb(0 0% 50%);
+		color: hwb(0 95% 5%);
+	}
+	.table .textbox {
+		background-color: hwb(0 0% 80%);
+		color: hwb(0 95% 5%);
+	}
+	.table .textbox:focus {
+		background-color: hwb(0 0% 60%);
+	}
 }
